data fetched from api - now working on styling

--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
   </head>
   <body>
     <h1>Team Members</h1>
-    <div class="container">
-      <div class="teamBox">
-        <div id="memberPic"></div>
-        <h2 id="memberName">Christine Bittle</h2>
-        <p id="memberBio">Web Enthusiast</p>
-      </div>
-    </div>
+    <div id="container"></div>
   </body>
 </html>
