working team member cards - can fix styling and add error handling

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="js/scripts.js"></script>
   </head>
   <body>
-    <h1>Team Members</h1>
+    <h1>Coding Challenge: Team Cards</h1>
     <div id="container"></div>
   </body>
 </html>
